# kafka4rust

./: .gitignore  Cargo.toml  README.md  TODO.md  TODO.txt  design.md
benches/: tokio_channel_clone.rs
bindings/csharp/cs-karst/: Program.cs
bindings/java/: readme.md  settings.gradle
bindings/java/src/main/java/org/karst/: Karst.java  KarstException.java
bindings/karst-jvm/: Cargo.toml  readme.md
bindings/karst-jvm/src/: lib.rs
cs-binding/cs-karst/: Class1.cs  cs-karst.csproj
doc/: async-design.md
docker/: Dockerfile  build.sh  docker-compose.yml  jaeger.yml  mk_topic.sh  offsets.sh  read.sh  send.sh  ssl-cluster2.yml  start.sh
libkarst/: Cargo.toml  design.md  todo.md
libkarst/src/: lib.rs
specs/: kafka4rust.als  leader_ring.als  orderedids.als  structure.als  trash.als
src/: admin.rs  api.rs  bichannel.rs  broker.rs  buffer_pool.rs  cluster.rs  connection.rs  connections_pool.rs  consumer.rs  correlation_future.rs  error.rs  event.rs  futures.rs  futures_union.rs  lib.rs  meta_cache.rs  metadiscover.rs  murmur2a.rs  producer.rs  producer_buffer.rs  protocol.rs  resolver.rs  retry_policy.rs  ssl.rs  timer.rs  types.rs  utils.rs  zigzag.rs
src/protocol/: api.rs  capabilities.rs  macros.rs  mod.rs  primitives.rs  producer_request.rs  requests.rs  responses.rs  typed_buffer.rs
src/wireshark/: Cargo.toml  build.rs  build.sh  todo.txt
src/wireshark/src/: bindings.rs  dissects.rs  fields.rs  lib.rs  macros.rs  plugin.rs  protocol.rs  utils.rs
src/wireshark/src/protocol/: macros.rs  mod.rs  primitives.rs  requests.rs  responses.rs
test/: run.sh
tests/: integration.rs  reliability.rs  utils.rs
tests/docker/: mod.rs
tests_2/: utils.rs
