[package]
name = "kafka4rust"
version = "0.1.0"
authors = ["Vadym Chekan <kot.begemot@gmail.com>"]
edition = "2018"
keywords = ["kafka"]
description = "High performance, async Kafka client"

#[workspace]
#members = ["libkarst", "bindings/karst-jvm"]

[profile.release]
lto = true
panic = 'abort'

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
indexmap = "1"

futures = "0.3"
# TODO: remove and leave tokio only
async-std = { version = "1.7.0", features = ["unstable"] }
tokio = { version = "1.23", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
futures-lite = "1"
tower = { version = "0.4", features = ["timeout","retry","discover","util"] }
futures-util = "0.3"
pin-project-lite = "0.2"

bytes = "1.0"
crc32c = "0.6"

opentelemetry = {version = "*", features = ["rt-tokio"]}
opentelemetry-otlp = "0.15"

tracing = { version = "0.1" }
tracing-subscriber = {version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "*"
tracing-futures = "0.2"
tracing-attributes = "0.1"
thrift = "0"

lazy_static = "1.4"

# for testing
rand = "0.8.4"

# CLI
clap = { version = "4.0", features = ["derive"] }
regex = "1.4"
tui = {git = "https://github.com/vchekan/tui-rs", branch="table-render-fix", default-features = false, features = ['crossterm']}
#{ version = "0.13", default-features = false, features = ['crossterm'] }
crossterm = {version = "0.18", features = ['event-stream'] }

[dev-dependencies]
criterion = "0.3"
assert_cmd = "1.0"

#[[bench]]
#name = "tokio_channel_clone"
#harness = false
