[package]
name = "kafka4rust"
version = "0.1.0"
authors = ["Vadym Chekan <kot.begemot@gmail.com>"]
edition = "2018"
keywords = ["kafka"]
description = "High performance, async Kafka client"

#[workspace]
#members = ["libkarst", "bindings/karst-jvm"]

[profile.release]
lto = true
panic = 'abort'

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
indexmap = "2"

futures = "0.3"
tokio = { version = "1.23", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
futures-util = "0.3"

bytes = "1.0"
crc32c = "0.6"

opentelemetry = {version = "*", features = ["rt-tokio"]}
opentelemetry-otlp = "0.15"

tracing = { version = "0.1" }
tracing-subscriber = {version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "*"
tracing-futures = "0.2"
tracing-attributes = "0.1"
thrift = "0"

# for testing
rand = "0.8.4"

# CLI
clap = { version = "4.0", features = ["derive"] }
regex = "1.4"
ratatui = "0"
crossterm = {version = "0", features = ['event-stream'] }

[dev-dependencies]
criterion = "0"
assert_cmd = "2"

#[[bench]]
#name = "tokio_channel_clone"
#harness = false
