[package]
name = "karst-jvm"
version = "0.1.0"
authors = ["Vadim Chekan <kot.begemot@gmail.com>"]
edition = "2018"

[dependencies]
kafka4rust = {path = "../../"}
jni = "0.17.0"
log = "0.4.11"
simple_logger = "1.11.0"
tokio = {version = "0.3.0", features = ["full"] }
lazy_static = "1.4.0"
waker-fn = "1.1.0"
pin-utils = "0.1.0"

[lib]
crate_type = ["cdylib"]