[package]
name = "karst-jvm"
version = "0.1.0"
authors = ["Vadim Chekan <kot.begemot@gmail.com>"]
edition = "2018"

[dependencies]
kafka4rust = {path = "../../"}
jni = "0.19"
log = "0.4"
simple_logger = "1.11"
tokio = {version = "1.23", features = ["full"] }
lazy_static = "1.4"
waker-fn = "1.1"
pin-utils = "0.1"

[lib]
crate_type = ["cdylib"]